cmake_minimum_required(VERSION 3.7)
project(SPOJ)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
    aba12d.cpp
    abcd.cpp
    abcdef.cpp
    ABCPath.cpp
    abcpath.cpp
    absp1.cpp
    absys.cpp
    acmaker.cpp
    acode.cpp
    acpc10a.cpp
    acpc10d.cpp
    acpc10e.cpp
    acpc11b.cpp
    acs.cpp
    activ.cpp
    adagame2.cpp
    adfruits.cpp
    adv04j.cpp
    ae00.cpp
    ae2a.cpp
    ae2b.cpp.cpp
    aggrcow.cpp
    aibohp.cpp
    alicesie.cpp
    alien.cpp
    ambm.cpp
    amr10g.cpp
    amr11e.cpp
    amr12d.cpp
    amzrck.cpp
    amzseq.cpp
    anarc05b.cpp
    anarc05h.cpp
    anarc08b.cpp
    anarc08g.cpp
    anarc09a.cpp
    anarc09b.cpp
    ap2.cpp
    aps.cpp
    arctan.cpp
    arith2.cpp
    army.cpp
    balife.cpp
    bandw.cpp
    base.cpp
    bc.cpp
    beads.cpp
    beenums.cpp
    billiard.cpp
    binstirl.cpp
    bitmap.cpp
    blcone.cpp
    blinnet.cpp
    bytese2.cpp
    bytesm2.cpp
    coins.cpp
    cuberoot.cpp
    diehard.cpp
    dsubseq.cpp
    edist.cpp
    emty2.cpp
    factorialTrail.cpp
    happiness.cpp
    iopalin.cpp
    knapsack.cpp
    mangoes.cpp
    martian.cpp
    mbeewalk.cpp
    mkbudget.cpp
    new.cpp
    nitk06.cpp
    nsteps.cpp
    opcpizza.cpp
    party.cpp
    permut1.cpp
    permutacja.cpp
    primegen1.cpp
    primeGenerator.cpp
    pt07y.cpp
    pt07z.cpp
    query.cpp
    samer08d.cpp
    SieveOfEratosthenes.cpp
    soldier.cpp
    sqrbr.cpp
    subseq.cpp
    SuperAmoeba.cpp
    template.cpp
    test.cpp
    trgrid.cpp
    trt.cpp
    twosqrs.cpp
    wachovia.cpp
    xorround.cpp
    zsum.cpp)

add_executable(SPOJ ${SOURCE_FILES})